<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.places.CreatePlaceActivity"
    android:theme="@style/Animation.Design.BottomSheetDialog">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:text="@string/tv_complet_to_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_margin="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPlaceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                android:layout_margin="5dp"
                android:background="@drawable/field_panel">
                <EditText
                    android:id="@+id/etPlaceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_place_name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPlaceResume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                android:background="@drawable/field_panel"
                android:layout_margin="5dp">
                <EditText
                    android:id="@+id/etPlaceResume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_place_resume"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="1500"
                android:layout_margin="5dp"
                android:background="@drawable/field_panel">
                <EditText
                    android:id="@+id/etContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_place_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilKeywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                android:layout_margin="5dp"
                android:background="@drawable/field_panel">
                <EditText
                    android:id="@+id/etKeywords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_place_keywords"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAddess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                android:layout_margin="5dp"
                android:background="@drawable/field_panel">
                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_place_address"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/field_panel"
                android:layout_marginHorizontal="5dp">
                <LinearLayout
                    android:layout_marginVertical="5dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:paddingHorizontal="5dp">
                    <TextView
                        android:text="@string/tv_place_departament"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="1dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/field_panel"
                        android:layout_marginEnd="1dp">
                        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                            android:id="@+id/spDepartaments"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textAlignment="textStart"
                            android:layout_marginHorizontal="5dp"/>
                    </LinearLayout>
                    <TextView
                        android:text="@string/tv_place_province"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="1dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/field_panel"
                        android:layout_weight="1"
                        android:layout_marginStart="1dp">
                        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                            android:id="@+id/spProvinces"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textAlignment="textStart"
                            android:layout_marginHorizontal="5dp"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLatLon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/field_panel"
                android:paddingHorizontal="4dp"
                app:placeholderText="@string/tv_location"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleY="1"
                        android:scaleX="1"
                        android:layout_gravity="center"
                        android:background="#ffffff">
                        <ImageButton
                            android:id="@+id/btnSetLocate"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:scaleType="centerInside"
                            app:srcCompat="@mipmap/map_image"
                            android:layout_marginHorizontal="0dp"
                            android:padding="1dp"
                            android:foreground="?attr/selectableItemBackground"
                            android:background="@color/white"/>
                    </androidx.cardview.widget.CardView>
                    <!--                Botones de latitud y longitud-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginBottom="10dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="#80FFFFFF"
                            android:layout_weight="1"
                            android:layout_marginRight="2dp"
                            android:padding="5dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_latitude"
                                android:textStyle="bold"
                                android:textSize="10dp"/>
                            <TextView
                                android:id="@+id/tvLatitude"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/tv_undefined"
                                android:textSize="10dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="#80FFFFFF"
                            android:layout_weight="1"
                            android:layout_marginLeft="2dp"
                            android:padding="5dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_longitude"
                                android:textStyle="bold"
                                android:textSize="10dp"/>
                            <TextView
                                android:id="@+id/tvLongitude"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/tv_undefined"
                                android:textSize="10dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="10dp"
                android:background="@drawable/field_panel"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_marginHorizontal="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_photo"/>
                <Button
                    android:id="@+id/btnSelectPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_photo_select"
                    android:gravity="fill"
                    android:textAllCaps="false"
                    android:drawablePadding="5dp"
                    android:textStyle="italic"
                    android:drawableEnd="@drawable/icon_image"/>

                    <androidx.cardview.widget.CardView
                        app:cardCornerRadius="5dp"
                        app:cardElevation="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleY="1"
                        android:scaleX="1"
                        android:layout_margin="2dp">
                        <ImageView
                            android:id="@+id/ivPhoto"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            app:srcCompat="@mipmap/image_icon"
                            android:scaleType="fitXY"/>
                    </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="20dp">
                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/btn_cancel"
                    android:layout_weight="1"
                    android:layout_marginRight="2dp"/>
                <Button
                    android:id="@+id/btnStore"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/btn_save"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>